Fixed layout problems
-got rid of unnecessary scroll
-added flex options that make the background easier to read
-added square borders and drop shadows

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* apply a natural box layout model to all elements, but allowing components to change */
-html {
+* {
     box-sizing: border-box;
+    margin:0
 }
 
 *,
@@ -23,18 +24,25 @@ body {
 .content {
     display: flex;
     flex-direction: row;
+    height: 100%;
 }
 
 .daily-dose {
-    margin: 0 10%;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin: 8em 10%;
 }
 
 h1 {
     font-size: 6rem;
     line-height: 6rem;
+    margin-bottom: 3rem;
 }
 
+h2 {
+    flex:1;
+}
 p {
     font-family: 'Roboto', sans-serif;
 }
@@ -67,24 +75,24 @@ button {
 } */
 .word-of-the-day {
     max-width: 25em;
-    background-color: rgba(0, 0, 0, 0.50);
-    border-radius: .75rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.36); 
+    box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.36);
     padding: 1rem 2rem;
-    flex:1;
-    margin:1em;
+    margin: 1em 0;
     align-self: flex-end;
 }
 
 .img-details {
     background-color: rgba(0, 0, 0, 0.50);
-    border-radius: .75rem;
+    /* border-radius: .75rem; */
+    -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.36); 
+    box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.36);
     padding: 1rem 2rem;
-    flex:2;
 }
 
-.extra-info{
+.extra-info {
     display: flex;
     flex-direction: column;
-    flex-grow:1;
-    
+    align-items: flex-end;
 }
